fix vertical gap

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -14,10 +14,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: $card-width;
-    height: 300px;
+    width: 100%;
+    height: $card-height;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 48px;
   }
 }
