--- a/src/styles/utils.scss/_variables.scss
+++ b/src/styles/utils.scss/_variables.scss
@@ -1,4 +1,5 @@
 $card-width: 200px;
+$card-height: 300px;
 $catalog-gap: 48px;
 
 $breakpoints:
